# cuda_pybind_Matrix_multiplication

./: CMakeLists.txt  README.md  example.py  matrix_mul.cu  matrix_mul_kernel.cu  matrix_mul_wrapper.cpp  requirements.txt
Src/: CMakeLists.txt  quiz.cu
Src/kernel_debug/: CMakeLists.txt  quiz.cu
